# extend_orfs

./: README.md  meta.yaml  setup.cfg
src/extend_orfs/: MMlib.py  extend_orfs.py
